app/styles/layout/_lead-content.scss
.lead-content {
  background-color: lighten($masthead-black, 15%);
  display: table;
  margin: 0 0 1.5em;
  position: relative;
  width: 100%;
}

.lead-image {
  background-image: url('../../assets/ShaleLife-background-placeholder.gif');
  background-position: center center;
  background-size: cover;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;

  @include media($bp-shale-lg) {
      background-image: url('../../assets/ShaleLife-background-placeholder.gif');
  }
}

// Header

.lead-header,
.story-box {
  display: block;
  position: relative;
  text-align: center;
  vertical-align: middle;
  @include span-columns(12);

  @extend %content-block;

  @include media($bp-shale-med) {
    @include span-columns(10 of 12);
    @include shift(1);
  }

  @include media($bp-shale-lg) {
    @include span-columns(12);
  }
}

.lead-header {
  margin-top: 3em;
}

.lead-text {
  color: $white;
  font-size: 1.1em;
  text-align: left;

  p {
    font-weight: 400;
  }

  a {
    text-decoration: none;
    &:hover {
      color: $light-denim;
    }
  }
}

.slide-box {
  @include span-columns(12);

  @include media($bp-shale-lg) {
    @include span-columns(10);
    @include shift(1);
  }

  img {
    margin-bottom: 1em;
    width: 100%;
  }
}

.slideshow-title {
  @include span-columns(6 of 10);

  h4 {
    color: $white;
    font-size: 1.3em;
    font-weight: 500;
    text-align: left;
  }
}

.slide-count {
  @include span-columns(4 of 10);
  @include omega();

  p {
    text-align: right;
  }
}

.slideshow-start {
  @include span-columns(8);
  @include shift(4);

  @include media($bp-shale-med) {
    @include span-columns(6);
    @include shift(2);
    margin-top: 0;
  }

  @include media($bp-shale-lg) {
    @include span-columns(4);
    @include shift(2);
    margin-top: 0;

  }
}

.slideshow-caption {
  @include span-columns(8);
  @include shift(4);

  @include media($bp-shale-med) {
    @include span-columns(8);
    @include shift(2);
  }

  @include media($bp-shale-lg) {
    @include span-columns(7);
    @include shift(2);

  }
}
.share-story {
  @include span-columns(12);
  border-top: 2px solid $yellow;
  margin: 1em 0 0;
  padding-top: 1em;

  @include media($bp-shale-med) {
    @include span-columns(3);
    @include omega();
    border-left: 2px solid $yellow;
    border-top: 0;
    margin: 0;
    padding-top: 0;
  }
  @include media($bp-shale-lg) {
    @include span-columns(2);
    @include omega();
    border-left: 2px solid $yellow;
    border-top: 0;
    margin: 0;
    padding-top: 0;
  }
}

.facebook,
.twitter {
  display: inline-block;
  height: 2em;
  margin: 0 0 .5em 1em;
  width: 2em;
}

.facebook {
  background: url(../../assets/icons/ShaleLife-img-facebook-white002.png) no-repeat;
  background-position: center center;
  background-size: cover;

  &:hover {
    background: url(../../assets/icons/ShaleLife-img-facebook-onhover002.png) no-repeat;
    background-position: center center;
    background-size: cover;
  }
}

.twitter {
  background: url(../../assets/icons/ShaleLife-img-twitter-white.png) no-repeat;
  background-position: center center;
  background-size: cover;

  &:hover {
    background: url(../../assets/icons/ShaleLife-img-twitter-onhover.png) no-repeat;
    background-position: center center;
    background-size: cover;
  }
}

.story-box {
  background-color: $tan-transparent;
}

.story {
  position: absolute;
  text-align: center;
  vertical-align: middle;
}

.story-prose {
  margin-top: 1em;

  @include media($bp-shale-med) {
    @include span-columns(6 of 10);
  }

  @include media($bp-shale-lg) {
    @include span-columns(6 of 10);
  }

  p {
    color: $off-black;
    font-weight: 500;
    margin: .5em 0 2em;
  }

  .byline {
    color: $dark-denim;
    font-style: italic;
    font-weight: 400;
    font-size: .95em;
    line-height: 1.3em;
  }

}

.map {
  @include media($bp-shale-med) {
    @include span-columns(4 of 10);
  }

  @include media($bp-shale-lg) {
    @include span-columns(4 of 10);
  }

  img {
    width: 90%;
  }

  h4 {
    color: $off-black;
    text-align: center;
  }
}

